# event-agent-december

./: .bandit  .coveragerc  .env  .pre-commit-config.yaml  API_DOCUMENTATION_SUMMARY.md  CI-CD_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTS_MAP.txt  EXECUTION_PLAN.md  GRAPH_QUICK_REFERENCE.md  INDEX.md  LOCAL_TESTING.md  Makefile  PHASE1_COMPLETION.md  PHASE3_COMPLETION.md  PHASE3_INDEX.md  PRIORITIZED_ROADMAP.md  QUICKSTART.md  README.md  ROADMAP.md  TASK_TRACKING.md  TEAMS_QUICK_REFERENCE.md  WORK_COMPLETED.md  _DELIVERY_SUMMARY.txt  agent-declaration.json  agent.py  agent_framework_adapter.py  agents_sdk_adapter.py  bot_handler.py  bot_server.py  copilot-plugin.json  core.py  errors.py  flow.dag.yaml  graph_auth.py  graph_service.py  logging_config.py  pyproject.toml  pytest.ini  (+9 more)
.devcontainer/: devcontainer.json
adapters/: __init__.py  base_adapter.py  bot_adapter.py  directline_bot.py  foundry_adapter.py  power_adapter.py  requirements-directline.txt
deploy/: .env.example  Dockerfile  docker-compose.yml  nginx.conf
docs/: DECISION_GUIDE.md  EXECUTION_PLAN.md  EXTENSIBILITY_GUIDE.md  INDEX.md  PLAN_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_old.md  REFERENCE.md  SCAFFOLD_ANALYSIS.md  TESTING_GUIDE.md  UNIFIED_ADAPTER_ARCHITECTURE.md  _CONSOLIDATION_PLAN.md  agents-sdk-setup.md  api-examples.md  api-guide.md  deployment-guide.md  foundry-deployment.md  openapi-spec.yaml
eventkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flows/: explain_session.py  generate_response.jinja2  parse_intent.py  (+1 more)
(+75 files in other folders)
