[project]
name = "eventkit"
version = "0.1.0"
description = "Event Kit agent: recommendation, explanation, telemetry, export"
authors = [ { name = "Vibe Kit" } ]
readme = "EVENT_KIT.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "msal>=1.25.0",
    "msgraph-core>=1.0.0",
    "pydantic-settings>=2.0.0",
    "azure-identity>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
]

[tool.setuptools]
py-modules = ["agent", "core", "settings", "telemetry", "runner"]

[project.scripts]
eventkit = "agent:main"
eventkit-runner = "runner:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"